--- a/resources/assets/package.json
+++ b/resources/assets/package.json
@@ -7,6 +7,7 @@
 		"normalize.css": "^3.0.3",
 		"stylus": "^0",
 		"stylus-library": "bkwld/stylus-library",
+		"velocity-animate": "*",
 		"vue": "^1.0.7",
 		"vue-resource": "^0",
 		"vue-router": "^0"
